Updates from poc added .gitignore

--- a/templates/security/app/list.html
+++ b/templates/security/app/list.html
@@ -142,15 +142,15 @@
                             <tr>
                                 <th scope="col" data-checkbox="true"></th>
                                 <th data-visible="false" data-field="id">index</th>
-                                <th scope="col" data-sortable="true" data-field="name" data-formatter="test_name_button" data-events="click_name">Name</th>
+                                <th scope="col" data-sortable="true" data-field="name" data-formatter="test_name_button">Name</th>
                                 <th scope="col" data-sortable="true" data-field="start_date">Start</th>
-                                <th scope="col" data-sortable="true" data-field="tests_duration">Duration</th>
-                                <th scope="col" data-sortable="true" data-field="tests_findings">Findings</th>
-                                <th scope="col" data-sortable="true" data-field="tests_fp">False Positive</th>
-                                <th scope="col" data-sortable="true" data-field="tests_excl">Excl</th>
-                                <th scope="col" data-sortable="true" data-field="tests_info">Info</th>
-                                <th scope="col" data-sortable="true" data-field="tests_tag">Tag</th>
-                                <th scope="col" data-field="test_status">Status</th>
+                                <th scope="col" data-sortable="true" data-field="duration">Duration</th>
+                                <th scope="col" data-sortable="true" data-field="findings">Findings</th>
+                                <th scope="col" data-sortable="true" data-field="false_positive">False Positive</th>
+                                <th scope="col" data-sortable="true" data-field="excluded">Excl</th>
+                                <th scope="col" data-sortable="true" data-field="info">Info</th>
+                                <th scope="col" data-sortable="true" data-field="tags">Tag</th>
+                                <th scope="col" data-field="test_status.status">Status</th>
                             </tr>
                         </thead>
                     </table>
